2013-09-25  Tom Tromey  <tromey@redhat.com>

	* Make-lang.in (CXX_TREE_H, CXX_PARSER_H, CXX_PRETTY_PRINT_H):
	Remove.

2013-09-25  Tom Tromey  <tromey@redhat.com>

	* Make-lang.in (g++spec.o): Remove.
	(CFLAGS-cp/g++spec.o): New variable.
	(GXX_OBJS): Reference cp/g++spec.o.
	(cc1plus-checksum.o, cp/lex.o, cp/cp-array-notation.o)
	(cp/cp-lang.o, cp/decl.o, cp/decl2.o, cp/cp-objcp-common.o)
	(cp/typeck2.o, cp/typeck.o, cp/class.o, cp/call.o)
	(cp/friend.o, cp/init.o, cp/method.o, cp/cvt.o, cp/search.o)
	(cp/tree.o, cp/ptree.o, cp/rtti.o, cp/except.o, cp/expr.o)
	(cp/pt.o, cp/error.o, cp/repo.o, cp/semantics.o, cp/dump.o)
	(cp/optimize.o, cp/mangle.o, cp/parser.o, cp/cp-gimplify.o)
	(cp/name-lookup.o, cp/cxx-pretty-print.o): Remove.

2013-09-25  Tom Tromey  <tromey@redhat.com>

	* Make-lang.in (g++spec.o): Don't use subshell.

2013-09-25  Marek Polacek  <polacek@redhat.com>

	PR c++/58516
	* semantics.c (finish_transaction_stmt): Check for EXPR_P before
	setting the expr location.

2013-09-23  Adam Butcher  <adam@jessamine.co.uk>

	PR c++/58500
	* type-utils.h (find_type_usage): Only traverse one type level into
	member function pointers.

2013-09-23  Adam Butcher  <adam@jessamine.co.uk>

	* parser.c (cp_parser_init_declarator): Defer calling
	finish_fully_implicit_template for forward declarations until after
	other decl processing is complete.  Cleanup for clarity: Extract 'else'
	case after 'if' containing unconditional return.

2013-09-23  Adam Butcher  <adam@jessamine.co.uk>

	* parser.c (make_generic_type_name): Spell generic type names '<autoN>'
	rather than '__GenN'.

2013-09-23  Adam Butcher  <adam@jessamine.co.uk>

	* lambda.c (maybe_add_lambda_conv_op): Don't check for instantiated
	callop in the case of generic lambdas.

2013-09-23  Adam Butcher  <adam@jessamine.co.uk>

	* parser.c (make_generic_type_name): Use global count rather than
	parameter and ...
	(add_implicit_template_parms): ... propagate interface change here.
